package sistemabibliotecas.modelo;

public interface Prestable {
    void prestar();
    void devolver();
}
